alpm-types/src/version/snapshots/buildtool::invalid_buildtoolver_new@case_3_bad_package_version.snap
---
source: alpm-types/src/version/buildtool.rs
---
Parser failed with the following error:
ß-1
^
invalid pkgver character
expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
