alpm-types/src/version/snapshots/pkg_full::parse_error_in_full_version_from_string@case_01_two_pkgrel.snap
---
source: alpm-types/src/version/pkg_full.rs
---
error: invalid full alpm-package-version
 | 
 | 1:foo-1-1
 |        ^
 | 
 = while parsing:
   full alpm-package-version: (-1)
   → The package version must end with a valid package release.
     I.e. a positive integer followed by an optional `.` and another positive integer
