alpm-types/src/version/snapshots/pkg_full::parse_error_in_full_version_from_string@case_03_empty_string.snap
---
source: alpm-types/src/version/pkg_full.rs
---
error: invalid character
 | 
 | 
 | ^ expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
 | 
 = while parsing:
   full alpm-package-version: ()
   └ alpm-pkgver: ()
     → invalid character
     → expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
