alpm-types/src/version/snapshots/pkg_full::parse_error_in_full_version_from_string@case_07_no_pkgrel.snap
---
source: alpm-types/src/version/pkg_full.rs
---
error: invalid full alpm-package-version
 | 
 | 1.0.0
 | ~~~~~^ expected the '-' delimiter that divides the alpm-pkgver and alpm-pkgrel
