alpm-types/src/version/snapshots/pkg_full::parse_error_in_full_version_from_string@case_08_no_pkgrel_dash_end.snap
---
source: alpm-types/src/version/pkg_full.rs
---
error: invalid package release
 | 
 | 1.0.0-
 |       ^ expected positive decimal integer
 | 
 = while parsing:
   full alpm-package-version: (1.0.0-)
   └ alpm-pkgrel: ()
     → invalid package release
     → expected positive decimal integer
