alpm-types/src/version/snapshots/pkg_full::parse_error_in_full_version_from_string@case_09_starts_with_dash.snap
---
source: alpm-types/src/version/pkg_full.rs
---
error: invalid character
 | 
 | -1foo:1
 | ^ expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
 | 
 = while parsing:
   full alpm-package-version: (-1foo:1)
   └ alpm-pkgver: (-1foo:1)
     → invalid character
     → expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
