alpm-types/src/version/snapshots/pkg_full::parse_error_in_full_version_from_string@case_10_ends_with_colon.snap
---
source: alpm-types/src/version/pkg_full.rs
---
error: invalid package release
 | 
 | 1-foo:
 |   ^ expected positive decimal integer
 | 
 = while parsing:
   full alpm-package-version: (1-foo:)
   └ alpm-pkgrel: (foo:)
     → invalid package release
     → expected positive decimal integer
